Modern IDB: Incorrect handling of iterating cursors to their end. https://bugs.webkit.org/show_bug.cgi?id=153569

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (3 tests now pass, others are closer to passing).

* Modules/indexeddb/server/SQLiteIDBCursor.cpp:
(WebCore::IDBServer::SQLiteIDBCursor::advance):
(WebCore::IDBServer::SQLiteIDBCursor::internalAdvanceOnce):

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/171645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195709 268f45cc-cd09-0410-ab3c-d52691b4dbfc